fix membership price spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2303,7 +2303,7 @@ p.wcfm_title, span.wcfm_title {
 
 #wcfm-main-contentainer .wcfm_membership_box_head .wcfm_membership_price .amount {
   border-color: #000000;
-  padding-top: 28px !important;
+  padding-top: 36px !important;
 }
 
 #wcfm-main-contentainer .wcfm_membership_box_body {
